input method and computed method for user.component.ts, name/avatar updated as methods in user.component.html

--- a/01-starting-project/src/app/user/user.component.html
+++ b/01-starting-project/src/app/user/user.component.html
@@ -2,7 +2,7 @@
   <button (click)="onSelectUser()">
     <img
       [src]="imagePath"
-      [alt]="name"/>
-    <span>{{ name }}</span>
+      [alt]="name()"/>
+    <span>{{ name() }}</span>
   </button>
 </div>
