--- a/01-starting-project/src/app/app.component.html
+++ b/01-starting-project/src/app/app.component.html
@@ -4,38 +4,30 @@
   <ul id="users">
     <li>
       <app-user
-        [id]="users[0].id"
-        [avatar]="users[0].avatar"
-        [name]="users[0].name"
+        [user]="users[0]"
         (select)="onSelectUser($event)"
       />
     </li>
     <li>
       <app-user
-        [id]="users[0].id"
-        [avatar]="users[1].avatar"
-        [name]="users[1].name"
+        [user]="users[1]"
         (select)="onSelectUser($event)"
       />
     </li>
     <li>
       <app-user
-        [id]="users[0].id"
-        [avatar]="users[2].avatar"
-        [name]="users[2].name"
+        [user]="users[2]"
         (select)="onSelectUser($event)"
       />
     </li>
     <li>
       <app-user
-        [id]="users[0].id"
-        [avatar]="users[3].avatar"
-        [name]="users[3].name"
+        [user]="users[3]"
         (select)="onSelectUser($event)"
       />
     </li>
   </ul>
 
-  TASKS OF USER
+  <app-tasks [name]="selectedUser ? selectedUser.name :'' "/>
 </main>
 
