--- a/01-starting-project/src/app/user/tasks/tasks.component.html
+++ b/01-starting-project/src/app/user/tasks/tasks.component.html
@@ -9,7 +9,7 @@
   <ul>
     @for (task of selectedUserTasks; track task.userId){
       <li>
-        <app-task  [task]="task"/>
+        <app-task  [task]="task" (complete)="onCompleteTask($event)"/>
       </li>
     }
   </ul>
