remove add task card when click backdrop or cancel button

--- a/01-starting-project/src/app/user/tasks/tasks.component.html
+++ b/01-starting-project/src/app/user/tasks/tasks.component.html
@@ -1,8 +1,13 @@
+@if (isAddingTask) {
+  <app-add-task (cancel)="onCancelAddTask()"/>
+}
+
+
 <section id="tasks">
   <header>
     <h2>{{name}}'s Tasks</h2>
     <menu>
-      <button>Add Task</button>
+      <button (click)="onAddTask()">Add Task</button>
     </menu>
   </header>
 
