task data can add to array, create card component

--- a/01-starting-project/src/app/user/tasks/tasks.component.html
+++ b/01-starting-project/src/app/user/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if (isAddingTask) {
-  <app-add-task (cancel)="onCancelAddTask()"/>
+  <app-add-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
 }
 
 
@@ -7,7 +7,7 @@
   <header>
     <h2>{{name}}'s Tasks</h2>
     <menu>
-      <button (click)="onAddTask()">Add Task</button>
+      <button (click)="onNewTask()">Add Task</button>
     </menu>
   </header>
 
