injection in tasks.component, refactoring

--- a/01-starting-project/src/app/user/tasks/tasks.component.html
+++ b/01-starting-project/src/app/user/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if (isAddingTask) {
-  <app-add-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)"/>
+  <app-add-task [userId]="userId" (close)="onCloseAddTask()" />
 }
 
 
