--- a/01-starting-project/src/app/user/tasks/tasks.component.html
+++ b/01-starting-project/src/app/user/tasks/tasks.component.html
@@ -2,7 +2,6 @@
   <app-add-task [userId]="userId" (close)="onCloseAddTask()" />
 }
 
-
 <section id="tasks">
   <header>
     <h2>{{name}}'s Tasks</h2>
@@ -14,7 +13,7 @@
   <ul>
     @for (task of selectedUserTasks; track task.userId){
       <li>
-        <app-task  [task]="task" (complete)="onCompleteTask($event)"/>
+        <app-task  [task]="task"/>
       </li>
     }
   </ul>
