--- a/02-investement-calculator/src/app/investment-results/investment-results.component.html
+++ b/02-investement-calculator/src/app/investment-results/investment-results.component.html
@@ -1,16 +1,21 @@
-<p>Please enter some values and press "Calculate"</p>
+@if (!results){
+  <p class="center">Please enter some values and press "Calculate"</p>
+} @else {
+  <table>
+    <thead>
+      <tr>
+        <th>Year</th>
+        <th>Investment Value</th>
+        <th>Interest (Year)</th>
+        <th>Total Interest</th>
+        <th>Invested Capital</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- dynamically display rows (*duration) -->
+    </tbody>
+  </table>
+}
 
-<table>
-  <thead>
-    <tr>
-      <th>Year</th>
-      <th>Investment Value</th>
-      <th>Interest (Year)</th>
-      <th>Total Interest</th>
-      <th>Invested Capital</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- dynamically display rows (*duration) -->
-  </tbody>
-</table>
+
+
