--- a/03-components-deep-dive/src/app/header/header.component.html
+++ b/03-components-deep-dive/src/app/header/header.component.html
@@ -13,12 +13,7 @@
       </li>
       <li>
         <button>
-          <span>
-            Logout
-          </span>
-          <span class="icon">
-            →
-          </span>
+          <button appButton></button>
         </button>
       </li>
     </ul>
