--- a/03-components-deep-dive/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/03-components-deep-dive/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -8,13 +8,9 @@
     <textarea name="request" id="request" rows="3"></textarea>
   </p>
   <p>
-    <button>
-      <span>
+    <button appButton>
         Submit
-      </span>
-      <span class="icon">
-        ⌲
-      </span>
+        <span class="icon"> ⌲ </span>
     </button>
   </p>
 </form>
