--- a/03-components-deep-dive/src/app/header/header.component.html
+++ b/03-components-deep-dive/src/app/header/header.component.html
@@ -12,8 +12,9 @@
         <a href="/">Management</a>
       </li>
       <li>
-        <button>
-          <button appButton></button>
+        <button appButton>
+          Logout
+          <span class="icon"> → </span>
         </button>
       </li>
     </ul>
