--- a/03-components-deep-dive/src/app/shared/button/button.component.html
+++ b/03-components-deep-dive/src/app/shared/button/button.component.html
@@ -1,8 +1,8 @@
 
   <span>
-    Logout
+    <ng-content />
   </span>
-  <span class="icon">
-    →
-  </span>
+
+    <ng-content select=".icon" />
+
 
