--- a/03-components-deep-dive/src/app/shared/button/button.component.html
+++ b/03-components-deep-dive/src/app/shared/button/button.component.html
@@ -1,8 +1,8 @@
 
   <span>
-    <ng-content />
+    <ng-content/>
   </span>
-
-    <ng-content select=".icon" />
-
+<span class="icon">
+    <ng-content select="icon" />
+</span>
 
