--- a/03-components-deep-dive/src/app/shared/button/button.component.html
+++ b/03-components-deep-dive/src/app/shared/button/button.component.html
@@ -3,6 +3,8 @@
     <ng-content/>
   </span>
 <span class="icon">
-    <ng-content select="icon" />
+    <ng-content select="icon">
+      → <!-- fallback content -->
+    </ng-content>
 </span>
 
