add or set classes dynamically via class binding

--- a/03-components-deep-dive/src/app/dashboard/server-status/server-status.component.html
+++ b/03-components-deep-dive/src/app/dashboard/server-status/server-status.component.html
@@ -1,4 +1,4 @@
-
+<div [class.status]="currentStatus === 'online'">
 
     @if (currentStatus === 'online') {
       <p>Servers are online</p>
@@ -10,5 +10,5 @@
       <p>Server status is unknown</p>
       <p>Fetching server status failed.</p>
     }
- 
+</div>
 
